--- a/package.json
+++ b/package.json
@@ -19,7 +19,16 @@
     "@types/bluebird": "^3.5.32",
     "@types/node": "^14.0.5",
     "@types/validator": "^13.0.0",
+    "@typescript-eslint/eslint-plugin": "^3.0.1",
+    "@typescript-eslint/parser": "^3.0.1",
     "dotenv": "^8.2.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-import-resolver-typescript": "^2.0.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-prettier": "^3.1.3",
+    "prettier": "^2.0.5",
     "sequelize-cli": "^5.5.1",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.9.3"
